<resources>
    <string name="app_name">MyApplication</string>
    <string name="Welcome">Welcome</string>
    <string name="Our">to our brand new app!</string>
    <string name="login">Login</string>
    <string name="sing">Registrar-se</string>
    <string name="username">usuário</string>
    <string name="password">senha</string>
    <string name="next">Fazer Login</string>
    <string name="voltar">voltar</string>
    <string name="abrir_mapa">Abrir mapa</string>
    <string name="duvida">Qual a sua dúvida?</string>
</resources>